--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.4",
-    "socket.io": "^2.3.0"
+    "pdfkit": "^0.11.0",
+    "socket.io": "^2.3.0",
+    "stripe": "^8.84.0"
   }
 }
