--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
+    "nodemailer-sparkpost-transport": "^2.2.0",
     "nodemon": "^2.0.4",
     "pdfkit": "^0.11.0",
     "socket.io": "^2.3.0",
+    "sparkpost": "^2.1.4",
     "stripe": "^8.84.0"
   }
 }
