--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "helmet": "^4.0.0",
+    "moment": "^2.29.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
